--- a/src/configs/config-mainnet.json
+++ b/src/configs/config-mainnet.json
@@ -2,5 +2,6 @@
     "nodeUrl": "https://nodes.waves.exchange",
     "signerClientUrl": "https://waves.exchange/signer",
     "explorerUrl": "https://wavesexplorer.com",
-    "dataServicesUrl": "https://waves.exchange/api/v1"
+    "dataServicesUrl": "https://waves.exchange/api/v1",
+    "iconServiceUrl": "https://waves.exchange/static/icons/assets"
 }
